# Document-Database

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: integrate.yml
database2/articles/: 000111.sst  000113.sst  000122.sst  IDENTITY  LOG  LOG.old.1668091312197080  LOG.old.1668091313417360  LOG.old.1668091314542179  LOG.old.1668091315698674  LOG.old.1668091316714907  LOG.old.1668091317930429  LOG.old.1668091338472665  LOG.old.1668091339884874  LOG.old.1668091341320662  LOG.old.1668091342654165  LOG.old.1668091343809390  LOG.old.1668091344939855  LOG.old.1668091352138823  LOG.old.1668091353372504  LOG.old.1668091354475310  LOG.old.1668091355632891  MANIFEST-000201  OPTIONS-000199
docs/: changelog.rst  collection.rst  conf.py  index.rst  index_api.rst  requirements.txt  usage.rst
docs/source/: changelog.rst  conf.py  index.rst  license.rst
document_database/: app.py  collection.py  database.py  document.py  document_db.py  encoding.py  examples.py  load.py  main.py  playground.py  writer.py
document_database/database/: 000019.sst  000048.sst  IDENTITY  LOG  LOG.old.1665277875346280  LOG.old.1665277891827326  LOG.old.1665277911139212  LOG.old.1665277940834862  (+6 more)
examples/: Players.csv  basic.py  ingestion.py  lokky.py
rockydb/: collection.py  index.py
src/: app.py  collection.py  database.py  docdb.py  encoding.py  examples.py  index.py  load.py  paper.py  rocky.py
tests/: data.xml  load.py  test_document_database.py  test_get_delete.py  test_index.py  test_insertions.py  test_query.py  test_textsearch.py
