[tool.poetry]
name = "Document Database"
version = "0.2.0"
description = ""
authors = ["Ahmed Al-Dulimi"]

[tool.poetry.dependencies]
python = "^3.8"
rocksdict = "^0.2.16"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
tantivy = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
