[tool.poetry]
name = "DocDB"
version = "0.2.7.2"
description = ""
authors = ["Ahmed Al-Dulimi"]

[tool.poetry.dependencies]
python = "^3.8"
tantivy = "^0.13.2"
rocksdict = "^0.2.16"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
